Add Facebook Ads Manager API with 3 endpoints: Facebook Ads, Google Sheets, Google Ads

--- a/python-api/requirements.txt
+++ b/python-api/requirements.txt
@@ -6,3 +6,6 @@ google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
 python-dotenv==1.0.1
 gunicorn==22.0.0
+requests==2.31.0
+facebook-business==19.0.0
+google-ads==22.0.0
